 Ver    Date        Change
 1.5.2 01/12/08
                    Fix: XBMC Atlantis language compatible.
                    Updated: Supporting libs.
 1.5.1  10/04/08    Updated: Language strings.
                    New: Comic feed for Little-gamers added to MyComics.xml
 1.5    28/02/08    New: Skinned
                    New: Language support  (english, german, swedish suppied) - Can you help translate the strings.xml ?
                    Code overhauled.
 1.4a   18/02/08    Fix: Display PNG images.
                    Change: Removed Funnies as a source, defunct website.
                    Change: Starts with Comic Source selection menu.
                    Change: Doesn't select 1st feed from comic source by default.
                    New: Comic datasource 'Questionable Content' (Thanks Zach)
 1.4    08/02/07    Change: Updated configParser to new bbbLib common funcs.
                    Readme & Changellog viewable from MainMenu.
 1.3    06/01/07    Fixed & Updated for XBMCScript audit.
                    New: Source 'Funnies' and removed some dead feeds.
                    New: Handle multiple images for comic edition (eg Tapestry: Sandles)
                    New: MC360 support
                    Changes: Uses my new libraries and folder structure etc
                    and lots of other internal code improvements (eg MainMenu, Overscan ...)
 1.2    29/04/05    New: 'MyComics' - Local file data source, can provide RSS feeds and/or HTML pages with regex.
 1.1    21/04/05    Comics source switchable between Comics.com & Tapestry.
                    Zoom and Move of image in fullscreen view.
                    Code rearranged into classes to separate data collection / storage / GUI
                    Better filtering of editions from Tapestry to remove non direct image links.
 1.0    11/04/05    Initial release